tap/ops/config-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configserver
  name: configserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8888
  selector:
    app: configserver
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver-deployment
spec:
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
        - name: configserver
          image: springcloud/spring-cloud-kubernetes-configserver:2.1.4
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/liveness
          ports:
            - containerPort: 8888
