tap/ops/auth-server-template.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: authserver-1
  namespace: #@ data.values.dev_namespace
spec:
  selector:
    app.kubernetes.io/part-of: authserver-1
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: authserver-1
  namespace: #@ data.values.dev_namespace
spec:
  virtualhost:
    fqdn: #@ data.values.issuer_uri.replace("https://", "").replace("http://", "")
    #@ if/end hasattr(data.values, "tls_secret_name"):
    tls:
      secretName: #@ data.values.tls_secret_name
    corsPolicy:
      allowOrigin:
        - "*" # allows any origin
      allowMethods:
        - "*"
      allowHeaders:
        - '*'
  routes:
    - conditions:
        - prefix: /
      services:
        - name: authserver-1
          port: 80
